21.02.3/packages/arm_cortex-a9_neon/node/index.md
---
---

# [releases](/releases/) / [21.02.3](/releases/21.02.3/) / [packages](/releases/21.02.3/packages/) / [arm_cortex-a9_neon](/releases/21.02.3/packages/arm_cortex-a9_neon/) / node


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 12K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 16K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [node-bcrypt_5.0.1-2_arm_cortex-a9_neon.ipk](./node-bcrypt_5.0.1-2_arm_cortex-a9_neon.ipk) | 604K | |
| 🗄️ [node-bufferutil_4.0.6-1_arm_cortex-a9_neon.ipk](./node-bufferutil_4.0.6-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [node-firmata_2.3.0-2_arm_cortex-a9_neon.ipk](./node-firmata_2.3.0-2_arm_cortex-a9_neon.ipk) | 32K | |
| 🗄️ [node-hap-nodejs_0.10.2-1_arm_cortex-a9_neon.ipk](./node-hap-nodejs_0.10.2-1_arm_cortex-a9_neon.ipk) | 2.0M | |
| 🗄️ [node-johnny-five_2.1.0-1_arm_cortex-a9_neon.ipk](./node-johnny-five_2.1.0-1_arm_cortex-a9_neon.ipk) | 468K | |
| 🗄️ [node-mdns_2.7.2-3_arm_cortex-a9_neon.ipk](./node-mdns_2.7.2-3_arm_cortex-a9_neon.ipk) | 136K | |
| 🗄️ [node-mqtt_4.3.7-1_arm_cortex-a9_neon.ipk](./node-mqtt_4.3.7-1_arm_cortex-a9_neon.ipk) | 500K | |
| 🗄️ [node-npm_v14.20.0-1_arm_cortex-a9_neon.ipk](./node-npm_v14.20.0-1_arm_cortex-a9_neon.ipk) | 3.9M | |
| 🗄️ [node-red-contrib-gpio_0.51.0-3_arm_cortex-a9_neon.ipk](./node-red-contrib-gpio_0.51.0-3_arm_cortex-a9_neon.ipk) | 620K | |
| 🗄️ [node-red-contrib-homekit-bridged_1.4.3-1_arm_cortex-a9_neon.ipk](./node-red-contrib-homekit-bridged_1.4.3-1_arm_cortex-a9_neon.ipk) | 176K | |
| 🗄️ [node-red-dashboard_3.1.7-1_arm_cortex-a9_neon.ipk](./node-red-dashboard_3.1.7-1_arm_cortex-a9_neon.ipk) | 2.9M | |
| 🗄️ [node-red-node-discovery_0.0.23-1_arm_cortex-a9_neon.ipk](./node-red-node-discovery_0.0.23-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [node-red-node-serialport_1.0.1-1_arm_cortex-a9_neon.ipk](./node-red-node-serialport_1.0.1-1_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [node-red_3.0.1-1_arm_cortex-a9_neon.ipk](./node-red_3.0.1-1_arm_cortex-a9_neon.ipk) | 11M | |
| 🗄️ [node-red_3.0.2-1_arm_cortex-a9_neon.ipk](./node-red_3.0.2-1_arm_cortex-a9_neon.ipk) | 11M | |
| 🗄️ [node-serialport-bindings-cpp_10.7.0-1_arm_cortex-a9_neon.ipk](./node-serialport-bindings-cpp_10.7.0-1_arm_cortex-a9_neon.ipk) | 124K | |
| 🗄️ [node-serialport-bindings_10.0.1-1_arm_cortex-a9_neon.ipk](./node-serialport-bindings_10.0.1-1_arm_cortex-a9_neon.ipk) | 460K | |
| 🗄️ [node-serialport_10.4.0-1_arm_cortex-a9_neon.ipk](./node-serialport_10.4.0-1_arm_cortex-a9_neon.ipk) | 52K | |
| 🗄️ [node-utf-8-validate_5.0.9-1_arm_cortex-a9_neon.ipk](./node-utf-8-validate_5.0.9-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [node-ws_8.8.1-1_arm_cortex-a9_neon.ipk](./node-ws_8.8.1-1_arm_cortex-a9_neon.ipk) | 36K | |
| 🗄️ [node-zigbee2mqtt_1.22.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.0-1_arm_cortex-a9_neon.ipk) | 4.4M | |
| 🗄️ [node-zigbee2mqtt_1.22.1-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.1-1_arm_cortex-a9_neon.ipk) | 6.2M | |
| 🗄️ [node-zigbee2mqtt_1.22.1-7_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.1-7_arm_cortex-a9_neon.ipk) | 6.2M | |
| 🗄️ [node-zigbee2mqtt_1.22.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.22.2-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.23.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.23.0-1_arm_cortex-a9_neon.ipk) | 6.8M | |
| 🗄️ [node-zigbee2mqtt_1.24.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.24.0-1_arm_cortex-a9_neon.ipk) | 5.2M | |
| 🗄️ [node-zigbee2mqtt_1.25.1-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.25.1-1_arm_cortex-a9_neon.ipk) | 5.3M | |
| 🗄️ [node-zigbee2mqtt_1.25.2-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.25.2-1_arm_cortex-a9_neon.ipk) | 5.3M | |
| 🗄️ [node-zigbee2mqtt_1.26.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.26.0-1_arm_cortex-a9_neon.ipk) | 5.9M | |
| 🗄️ [node-zigbee2mqtt_1.27.0-1_arm_cortex-a9_neon.ipk](./node-zigbee2mqtt_1.27.0-1_arm_cortex-a9_neon.ipk) | 6.1M | |
| 🗄️ [node_v14.20.0-1_arm_cortex-a9_neon.ipk](./node_v14.20.0-1_arm_cortex-a9_neon.ipk) | 9.4M | |

